# agent-claw-box

./: .gitignore  .taurignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/hooks/: check-types.json
.github/instructions/: frontend-react.instructions.md  rust-backend.instructions.md
.github/prompts/: add-migration.prompt.md  new-template.prompt.md
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20260305000001_initial.sql  20260309000001_add_version_config.sql  20260309000002_add_backups.sql  20260319000001_add_vm_name.sql  20260323000001_add_app_settings.sql
apps/desktop/src-tauri/src/: commands.rs  db.rs  health.rs  lib.rs  main.rs  metrics.rs  network.rs  pty.rs  state.rs  system.rs  template.rs
apps/desktop/src/components/: Layout.tsx  SetupOverlay.tsx
docs/: .gitignore  FAQ.md  GUIDE.md
docs/develop/: AgentBox 项目立项文档.md  TEST_GUIDE.md  开发进度-2026-03-16.md  打包与发布指南.md
registry/: README.md
runtime/docker/: Cargo.toml
runtime/docker/src/: container.rs  lib.rs
runtime/vm/: Cargo.toml
runtime/vm/src/: lib.rs  lima.rs  manager.rs  native.rs  provider.rs  qemu.rs  wsl.rs
scripts/: README.md
templates/copaw/: Dockerfile  agent.yaml  install.sh  run.sh
templates/nanobot/: Dockerfile  agent.yaml  docker-compose.yml  install.sh  run.sh
templates/openclaw/: Dockerfile  agent.yaml  install.sh  run.sh
(+11 files in other folders)
