[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "runtime/vm",
    "runtime/docker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AgentBox Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
