[package]
name = "agentbox-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs-next.workspace = true
open.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
portable-pty = "0.8"

agentbox-vm = { path = "../../../runtime/vm" }
agentbox-docker = { path = "../../../runtime/docker" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "agentbox_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
